force-app/main/default/objects/EYI_City__c/fields/EYI_Category__c.field-meta.xml
<CustomField>
    <fullName>EYI_Category__c</fullName>
    <formula>IF(Name = &quot;Pune&quot;,&quot;Pune&quot;,
IF(Name = &quot;Mumbai&quot;, &quot;Mumbai&quot;,
IF(Name &lt;&gt; &quot;Pune&quot; &amp;&amp; Name &lt;&gt; &quot;Mumbai&quot; &amp;&amp; ISPICKVAL(EYI_State__c , &quot;Maharashtra&quot; ) ,&quot;ROM&quot;,
IF(CONTAINS( TEXT(EYI_State__c) , $Label.EYI_NRI_States ) ,&quot;NRI&quot;,&quot;ROI&quot;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>