force-app/main/default/objects/EYI_City__c/fields/EYI_Geographical_Zone__c.field-meta.xml
<CustomField>
    <fullName>EYI_Geographical_Zone__c</fullName>
    <label>Geographical Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Central Suburbs</fullName>
            </value>
            <value>
                <fullName>Navi Mumbai</fullName>
            </value>
            <value>
                <fullName>South Central</fullName>
            </value>
            <value>
                <fullName>South Mumbai</fullName>
            </value>
            <value>
                <fullName>Far Central</fullName>
            </value>
            <value>
                <fullName>Far Western</fullName>
            </value>
            <value>
                <fullName>Thane</fullName>
            </value>
            <value>
                <fullName>Western Suburbs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>