force-app/main/default/objects/EYI_City__c/fields/EYI_Locality__c.field-meta.xml
<CustomField>
    <fullName>EYI_Locality__c</fullName>
    <description>Used to store the locality</description>
    <label>Locality</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>