force-app/main/default/objects/EYI_City__c/fields/EYI_Pincode__c.field-meta.xml
<CustomField>
    <fullName>EYI_Pincode__c</fullName>
    <label>Pincode</label>
    <length>7</length>
    <type>Text</type>
</CustomField>