force-app/main/default/objects/EYI_City__c/fields/EYI_State__c.field-meta.xml
<CustomField>
    <fullName>EYI_State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Mailing_state</valueSetName>
    </valueSet>
</CustomField>