force-app/main/default/objects/EYI_City__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>EYI_Locality__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Mumbai</value>
    </filters>
    <label>All</label>
</ListView>